<resources>
    <string name="app_name">Exercicio08</string>

    <string name="digite_valor_conta_sem_bebidas">Valor da conta</string>
    <string name="digite_valor_bebidas">Valor das bebidas</string>
    <string name="digite_numero_pessoas">Não de pessoas</string>
    <string name="digite_numero_pessoas_bebem">Não de pessoas que bebem</string>
    <string name="porcertagem_garcom">Porcentagem do Garçom</string>

    <string name="porcentagem_00">00%</string>
    <string name="porcentagem_10">10%</string>
    <string name="porcentagem_20">20%</string>
    <string name="porcentagem_30">30%</string>
    <string name="porcentagem_40">40%</string>
    <string name="porcentagem_50">50%</string>
    <string name="porcentagem_60">60%</string>
    <string name="porcentagem_70">70%</string>
    <string name="porcentagem_80">80%</string>
    <string name="porcentagem_90">90%</string>
    <string name="porcentagem_100">100%</string>

    <string name="calcular_total_pagar">Calcular total a pagar</string>

    <string name="valor_garcom">Valor do Garçom:</string>
    <string name="valor_total">Valor Total:</string>
    <string name="valor_individual">Valor Individual:</string>

    <string name="valor_zero">R$ 0.00</string>

    <string name="valores_nao_bebe">Valores para quem não bebe</string>
    <string name="valores_bebe">Valores para quem bebe</string>

    <string name="custo_nao_bebe">Custos para quem não bebe</string>
    <string name="custo_bebe">Custos para quem bebe</string>

</resources>
