<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrey"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/valores_nao_bebe"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ET_valorConta"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digite_valor_conta_sem_bebidas"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ET_numeroPessoas"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digite_numero_pessoas"
                            android:inputType="number"
                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/valores_bebe"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ET_valorContaBebe"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digite_valor_conta_sem_bebidas"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ET_numeroPessoasBebe"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digite_numero_pessoas"
                            android:inputType="number"
                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/porcertagem_garcom"
                    android:textColor="@color/colorblack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

                <SeekBar
                    android:id="@+id/SB_porcentagemGarcom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TV_porcentagem00"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_00"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_10"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem20"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_20"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem30"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_30"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem40"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_40"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_50"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem60"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_60"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem70"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_70"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem80"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_80"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem90"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/porcentagem_90"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_porcentagem100"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/porcentagem_100"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/BT_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="CalcularConta"
                android:background="@drawable/background_blue_rounded"
                android:text="@string/calcular_total_pagar"
                android:textColor="@color/colorwhite" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/custo_nao_bebe"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_garcom"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorGarcom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_total"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_individual"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorIndividual"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/custo_bebe"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_garcom"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorGarcomBebem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_total"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorTotalBebem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_individual"
                        android:textColor="@color/colorblack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TV_valorIndividualBebem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_zero"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.v7.widget.LinearLayoutCompat>